# wordclock-firmware

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/DHT22/: CMakeLists.txt  DHT22.cpp  DHT22.h
lib/RTC/: CMakeLists.txt  RTClib.cpp  RTClib.h
lib/UART/: CMakeLists.txt  uart.cpp  uart.h
lib/Wire/: CMakeLists.txt  Wire.cpp  Wire.h  twi.c
lib/nanopb/: CMakeLists.txt
proto/: messages.proto
proto/fr/maelgui/wordclock/: MessageProtos.java  MessagesProto.java
proto/fr/maelgui/wordclockmanager/: MessagesProto.java
src/: CMakeLists.txt  bluetooth.cc  bluetooth.h  core.cc  core.h  display.cc  display.h  main.cc  messages.cc  messages.h  messages.pb.c  messages.pb.h  pin.h  settings.h  temperature.cc  temperature.h  version.h.in  wordclock.cc  wordclock.h
